@@ -154,38 +154,86 @@ EWearableType LLWearable::typeNameToType( const std::string& type_name )
 }
 
 
-std::string terse_F32_to_string( F32 f )
+const char* terse_F32_to_string( F32 f, char s[MAX_STRING] ) /* Flawfinder: ignore */
 {
-	std::string r = llformat( "%.2f", f );
+
+	char* r = s;
+	S32 len = snprintf( s, MAX_STRING, "%.2f", f );		/* Flawfinder: ignore */
 
 	// "1.20"  -> "1.2"
 	// "24.00" -> "24."
-	S32 len = r.length();
-	while( len > 0 && '0' == r[len - 1] )
+	while( '0' == r[len - 1] )
 	{
-		r.erase(len-1, 1);
 		len--;
+		r[len] = '\0';
 	}
 
 	if( '.' == r[len - 1] )
 	{
 		// "24." -> "24"
-		r.erase(len-1, 1);
+		len--;
+		r[len] = '\0';
 	}
 	else
 	if( ('-' == r[0]) && ('0' == r[1]) )
 	{
 		// "-0.59" -> "-.59"
-		r.erase(1, 1);
+		r++;
+		r[0] = '-';
 	}
 	else
 	if( '0' == r[0] )
 	{
 		// "0.59" -> ".59"
-		r.erase(0, 1);
+                r++;
 	}
 
 	return r;
+}
+
+// reX: new function
+BOOL LLWearable::FileExportParams( FILE* file )
+{
+	// wearable type
+	S32 type = (S32)mType;
+	fprintf( file, "type %d\n", type );
+
+	// parameters
+	S32 num_parameters = mVisualParamMap.size();
+	fprintf( file, "parameters %d\n", num_parameters );
+
+	char s[ MAX_STRING ];		/* Flawfinder: ignore */
+	for (param_map_t::iterator iter = mVisualParamMap.begin();
+		 iter != mVisualParamMap.end(); ++iter)
+	{
+		S32 param_id = iter->first;
+		F32 param_weight = iter->second;
+		fprintf( file, "%d %s\n", param_id, terse_F32_to_string( param_weight, s ) );
+	}
+
+	return TRUE;
+}
+
+// reX: new function
+BOOL LLWearable::FileExportTextures( FILE* file )
+{
+	// wearable type
+	S32 type = (S32)mType;
+	fprintf( file, "type %d\n", type );
+
+	// texture entries
+	S32 num_textures = mTEMap.size();
+	fprintf( file, "textures %d\n", num_textures );
+
+	for (te_map_t::iterator iter = mTEMap.begin();
+		 iter != mTEMap.end(); ++iter)
+	{
+		S32 te = iter->first;
+		LLUUID& image_id = iter->second;
+		fprintf( file, "%d %s\n", te, image_id.asString().c_str() );
+    }
+
+	return TRUE;
 }
 
 BOOL LLWearable::exportFile( LLFILE* file )
@@ -234,12 +282,13 @@ BOOL LLWearable::exportFile( LLFILE* file )
 		return FALSE;
 	}
 
+        char s[MAX_STRING]; /* Flawfinder: ignore */
 	for (param_map_t::iterator iter = mVisualParamMap.begin();
 		 iter != mVisualParamMap.end(); ++iter)
 	{
 		S32 param_id = iter->first;
 		F32 param_weight = iter->second;
-		if( fprintf( file, "%d %s\n", param_id, terse_F32_to_string( param_weight ).c_str() ) < 0 )
+		if( fprintf( file, "%d %s\n", param_id, terse_F32_to_string( param_weight, s ) ) < 0 )
 		{
 			return FALSE;
 		}
